# serializer version: 1
# name: test_registry_add_invalid
  DuplicateArchitectureError('Duplicate architecture: b')
# ---
# name: test_registry_add_invalid.1
  DuplicateArchitectureError('Duplicate architecture: test')
# ---
# name: test_registry_add_invalid.2
  ValueError('Circular dependency in architecture detection: 1 -> 2 -> 1')
# ---
# name: test_registry_order
  list([
    'a',
    'b',
    'c',
    'd',
    'e',
    'f',
    'test',
  ])
# ---
# name: test_registry_order.1
  list([
    'a',
    'b',
    'c',
    'test',
    'd',
    'e',
    'f',
  ])
# ---
